[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/CardSelection.gd" type="Script" id=1]
[ext_resource path="res://aseprite/SelectionBox.png" type="Texture" id=2]
[ext_resource path="res://res/cards/space_bar1.png" type="Texture" id=3]
[ext_resource path="res://res/cards/space_bar2.png" type="Texture" id=4]
[ext_resource path="res://res/cards/space_bar3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CardSelection" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SelectionScreen" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.172549, 0.172549, 0.172549, 0.709804 )
position = Vector2( 640, 360 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="DescriptionLabel" type="Label" parent="SelectionScreen"]
margin_left = -383.0
margin_top = -244.0
margin_right = 209.0
margin_bottom = -149.0
rect_scale = Vector2( 1.3, 1.3 )
text = "Prepare your deck for the next level by selecting two cards.
Grayed out cards are already banned for this round."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsLeftLabel" type="Label" parent="SelectionScreen"]
margin_left = -384.0
margin_top = -154.333
margin_right = 41.0
margin_bottom = -117.333
rect_scale = Vector2( 1.8, 1.8 )
text = "3 Cards left to eliminate."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBar" type="AnimatedSprite" parent="."]
position = Vector2( 631.55, 647.549 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
playing = true

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
